Fix Network Layout widget scrollbar overlapping devices number
NGFW-6025

--- a/uvm/servlets/admin/sass/widgets.scss
+++ b/uvm/servlets/admin/sass/widgets.scss
@@ -436,7 +436,7 @@
             margin-bottom: 10px;
             .pointer {
                 top: auto;
-                bottom: -12px;
+                bottom: -15px;
                 transform: rotate(180deg);
                 -webkit-transform: rotate(180deg);
             }
